--- a/package.json
+++ b/package.json
@@ -23,10 +23,17 @@
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@swimlane/ngx-charts": "^7.0.1",
     "@swimlane/ngx-datatable": "^15.0.2",
+    "@syncfusion/ej2-angular-base": "^17.4.52",
     "@syncfusion/ej2-angular-buttons": "^17.4.51",
+    "@syncfusion/ej2-angular-calendars": "^17.4.51",
     "@syncfusion/ej2-angular-grids": "^17.4.51",
     "@syncfusion/ej2-angular-inputs": "^17.4.51",
     "@syncfusion/ej2-angular-splitbuttons": "^17.4.51",
+    "@syncfusion/ej2-calendars": "^17.4.51",
+    "@syncfusion/ej2-inputs": "^17.4.51",
+    "@syncfusion/ej2-lists": "^17.4.51",
+    "@syncfusion/ej2-popups": "^17.4.51",
+    "@syncfusion/ej2-splitbuttons": "^17.4.51",
     "angular-calendar": "^0.25.2",
     "angular-datatables": "^6.0.1",
     "angular-file-uploader": "^5.0.2",
