--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^8.1.0",
     "@angular/core": "^8.1.0",
     "@angular/forms": "^8.1.0",
+    "@angular/http": "^7.2.16",
     "@angular/platform-browser": "^8.1.0",
     "@angular/platform-browser-dynamic": "^8.1.0",
     "@angular/router": "^8.1.0",
@@ -26,6 +27,7 @@
     "@syncfusion/ej2-angular-base": "^17.4.52",
     "@syncfusion/ej2-angular-buttons": "^17.4.51",
     "@syncfusion/ej2-angular-calendars": "^17.4.51",
+    "@syncfusion/ej2-angular-filemanager": "^17.4.51",
     "@syncfusion/ej2-angular-grids": "^17.4.51",
     "@syncfusion/ej2-angular-inputs": "^17.4.51",
     "@syncfusion/ej2-angular-splitbuttons": "^17.4.51",
