--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@syncfusion/ej2-angular-base": "^17.4.52",
     "@syncfusion/ej2-angular-buttons": "^17.4.51",
     "@syncfusion/ej2-angular-calendars": "^17.4.51",
+    "@syncfusion/ej2-angular-dropdowns": "^18.1.42",
     "@syncfusion/ej2-angular-filemanager": "^17.4.51",
     "@syncfusion/ej2-angular-grids": "^17.4.51",
     "@syncfusion/ej2-angular-inputs": "^17.4.51",
